@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ENHANCED: xpce-stub.exe to show a messagebox if initialisation or execution
+  fails.  Simplifies debugging.
+
 * ENHANCED: improved error message if selector is not an atom.
 
 * FIXED: seek issues on streams created from XPCE objects.
